@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.34 2004/04/04 18:32:16 h_oudejans Exp $
+$Id: ChangeLog,v 1.35 2004/04/04 19:47:14 h_oudejans Exp $
+
+2004-05-04 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Frameskip works now for openmsx 1198 and higher
+	* Minor fixes in the launch script interpreter.
 
 2004-04-04 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Catapult no longer segfaults when it can't find the resources
